@@ -5,7 +5,7 @@ require 'date'
 
 class IRCWorld < NSObject
   attr_accessor :member_list, :dcc, :view_theme
-  attr_writer :tree, :log_base, :console_base, :chat_box, :field_editor, :text, :window, :pref
+  attr_writer :app, :tree, :log_base, :console_base, :chat_box, :field_editor, :text, :window, :pref
   attr_accessor :menu_controller
   attr_accessor :tree_default_menu, :server_menu, :channel_menu, :tree_menu, :log_menu, :console_menu, :url_menu, :addr_menu, :member_menu
   attr_reader :units, :selected, :console, :config
@@ -506,6 +506,16 @@ class IRCWorld < NSObject
   
   def outlineViewSelectionDidChange(note)
     selitem = @tree.itemAtRow(@tree.selectedRow)
+    if @selected != selitem
+      @selected.last_input_text = @text.stringValue.to_s if @selected
+      @app.addToHistory
+      if selitem
+        @text.setStringValue(selitem.last_input_text || '')
+      else
+        @text.setStringValue('')
+      end
+      select_text
+    end
     unless selitem
       @log_base.setContentView(@dummylog.view)
       @tree.setMenu(@tree_menu)
